# lonic-cloud-agent-infra

./: README.md
cdk/: .gitignore  .npmrc  codeartifact-login.js  package-lock.json  package.json
cdk/lib/: LonicCloudAgentStack.ts
cdk/lib/api/: agent-api.ts
cdk/lib/commands/: api-sfn-integration.ts  command-queue.ts  deploy-stacks.ts  describe-stacks.ts  destroy-stacks.ts  detect-drift.ts  get-changeset.ts  get-execution-status.ts  self-update.ts  start-execution.ts  synth.ts
cdk/lib/lambdas/: event-reporter.ts  get-upload-url.ts  health-check.ts  runtime-error-reporter.ts
cdk/lib/pipeline/: deployment-pipeline.ts
cdk/lib/registration/: agent-registration.ts
cdk/lib/review/: configure-review.ts  review-packager.ts  review-result-handler.ts
cdk/test/: cdk.test.ts
docs/: agent-api-design.md  agent-design.md  ai-review-agent.md  commons-task-choice-default-as-continuation.md  commons-task-cloudformation-sdk-steps.md  commons-task-cross-region-deploy.md  commons-task-dynamic-deploy.md  commons-task-poll-until-step.md  commons-task-poll-until-unique-names.md  commons-task-sfn-sdk-steps.md  commons-task-webhook-table-ref.md  library-and-service-summary.md  remaining-work.md  roadmap.md  versioning-and-artifacts.md
docs/backend/: README.md  agent-protocol.md  api-design.md  architecture.md  auth.md  domain-model.md  orchestration.md
lambdas/: Cargo.toml
lambdas/crates/agent-core/: Cargo.toml
lambdas/crates/agent-core/src/: error.rs  lib.rs  observability.rs
lambdas/crates/agent-core/src/callback/: client.rs  mod.rs
lambdas/crates/agent-core/src/cfn/: events.rs  mod.rs
lambdas/crates/agent-core/src/codebuild/: logs.rs  mod.rs
lambdas/crates/agent-core/src/models/: command.rs  health.rs  mod.rs  outputs.rs  registration.rs  status.rs
lambdas/crates/agent-core/src/secrets/: manager.rs  mod.rs
lambdas/crates/event-reporter/: Cargo.toml
lambdas/crates/event-reporter/src/: main.rs
lambdas/crates/health-check/: Cargo.toml
lambdas/crates/health-check/src/: main.rs
lambdas/tests/events/: health_check.json  synth_failed.json  task_failed.json  task_in_progress.json  task_succeeded.json
