[package]
name = "agent-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
aws-config.workspace = true
aws-sdk-cloudformation.workspace = true
aws-sdk-codebuild.workspace = true
aws-sdk-sfn.workspace = true
aws-sdk-secretsmanager.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
chrono.workspace = true
tokio.workspace = true

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
