[package]
name = "health-check"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
aws-config.workspace = true
aws-sdk-sts.workspace = true
lambda_runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
tokio.workspace = true
